--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("./images/ac-bg-img.png");
+  background-image: url('./images/ac-bg-img.png');
   min-height: 100%;
 }
 
